UI overlapping issue  client , recruiter dashboard

--- a/src/modules/report/screens/clientDashboardReport/clientDashboard.module.css
+++ b/src/modules/report/screens/clientDashboardReport/clientDashboard.module.css
@@ -2,7 +2,7 @@
     font-weight: bold;
     position: sticky !important;
     top: 0;
-    /* z-index: 4; */
+    z-index: 4;
     background-color: #fff7d6 !important;
 }
 
